--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
   <script src="scripts/welcome-carousel.js"></script>
-  <script src="scripts/events-carousel.js"></script>
-  <script src="scripts/events.js"></script>
+  <script type="module" src="scripts/events-carousel.js"></script>
+  <script type="module" src="scripts/events.js"></script>
 </body>
 </html>
