--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <span>SECONDS</span>
             </div>
           </div>
-          <a>VIEW DETAILS <i class="fa-solid fa-arrow-right fa-sm"></i></a>
+          <a class="details">VIEW DETAILS <i class="fa-solid fa-arrow-right fa-sm"></i></a>
         </div>
       </div>
       <div></div>
